--- a/index.html
+++ b/index.html
@@ -1329,7 +1329,7 @@
                                         <div class="nc684nl6"><b>Laura Alonso</b>
                                         </div>
                                         <div class="ecm0bbzt e5nlhep0 a8c37x1j" style="position: relative;">
-                                           ¡Con tus ánimos, Shaila, me sentía invencible! ¡Así es como he cambiado!  🔥
+                                           ¡Con tus ánimos, Anabel, me sentía invencible! ¡Así es como he cambiado!  🔥
                                            <br><br>
                                            <img src="images/Comm1.jpg" style="width: 100%;" alt="">
                                            <div class="component_licked" style="display: flex;">
@@ -1578,7 +1578,7 @@
                                         <div class="nc684nl6"><b>Mercedes Romero</b>
                                         </div>
                                         <div class="ecm0bbzt e5nlhep0 a8c37x1j" style="position: relative;">
-                                           Shaila, gracias a tu historia y a Fortunella, he comenzado mi viaje hacia la salud. ¡Mi familia está encantada con mis cambios! ¡He aquí cómo he cambiado!
+                                           Anabel, gracias a tu historia y a Fortunella, he comenzado mi viaje hacia la salud. ¡Mi familia está encantada con mis cambios! ¡He aquí cómo he cambiado!
                                            <br><br>
                                            <img src="images/Comm5.jpeg" style="width: 100%;" alt="">
                                            <div class="component_licked" style="display: flex;">
