--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                                 <img src="images/Pic1.jpg" style="width: 100%;margin: 10px auto;border-radius: 10px;">
   
                               <div>
-                                Sí, he perdido 13 kg en 2 meses. Mis fotos recientes no han sido editadas en Photoshop. Ahora peso 58 kg y espero perder otros 6-7 kg. <br/><br/>
+                                Sí, he perdido 13 kg en 1 meses. Mis fotos recientes no han sido editadas en Photoshop. Ahora peso 58 kg y espero perder otros 6-7 kg. <br/><br/>
                                 La gran pregunta es ¿cómo lo he conseguido? Es cierto, mi Instagram está lleno de fotos de comida. Sí, me encanta la comida deliciosa y por eso no he cambiado nada en mi dieta, sigo comiendo mis postres favoritos. Por ejemplo, ahora mismo mientras escribo este post, estoy terminando mi helado.
                               </div>
   
@@ -428,7 +428,7 @@
                               <img src="images/Pic3.jpg" style="width: 100%;margin: 10px auto;border-radius: 10px;">
                               
                               <div>
-                                En el primer mes perdí fácilmente 9 kilos. En el segundo mes perdí otros 4 kg. Ya casi no tengo celulitis en las piernas. Por fin he perdido barriga. <br/><br/>¿No es fantástico?<br/><br/>
+                                En el primer mes perdí fácilmente 13 kilos. Ya casi no tengo celulitis en las piernas. Por fin he perdido barriga. <br/><br/>¿No es fantástico?<br/><br/>
                                 Con la ayuda de este producto, pasé de la talla XXL a la M y ahora puedo llevar ropa bonita y a la moda en lugar de grandes vestidos chillones. También he ganado confianza para publicar fotos en traje de baño.<br/><br/>
   
                                 Estoy muy contenta con mi nuevo cuerpo, pero para estar aún más estupenda, quiero perder algunos kilos más. Para ello, sigo tomando las gotas. Creo que un par de semanas más y conseguiré los resultados que quiero.<br/><br/>
