--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
                     
                     <input class="form-input" name="phone" type="tel" placeholder="Teléfono (móvil activo)" required>
 
-                    <button type="submit" name="submitBtn">Pedir en promoción</button>
+                    <button type="submit" name="submitBtn">Deseo adelgazar</button>
 
                     
                 </form>
